--- a/{{cookiecutter.repo_name}}/index.html
+++ b/{{cookiecutter.repo_name}}/index.html
@@ -12,17 +12,20 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-        <link rel="stylesheet" href="css/reveal.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+        <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="css/theme/{{cookiecutter.theme}}.css" id="theme">
 
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
-
-        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        
+        <!-- Printing and PDF exports -->
         <script>
-            document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
         </script>
 
         <!--[if lt IE 9]>
@@ -44,7 +47,7 @@
         </div>
 
         <script src="lib/js/head.min.js"></script>
-        <script src="js/reveal.min.js"></script>
+        <script src="js/reveal.js"></script>
 
         <script>
 
@@ -52,8 +55,8 @@
             // https://github.com/hakimel/reveal.js#configuration
             Reveal.initialize({
                 keyboard: {
-                    13: null,
-                    32: null
+                    13: null, // don't do anything when ENTER is pressed (i.e. disable a reveal.js default binding)
+                    32: null  // don't do anything when SPACE is pressed (i.e. disable a reveal.js default binding)
                 },
                 controls: true,
                 progress: true,
@@ -62,7 +65,7 @@
                 slideNumber: true,
 
                 theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-                transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+                                transition: 'slide', // none/fade/slide/convex/concave/zoom
 
                 // Parallax scrolling
                 // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
